--- a/app/views/resumes/_resume_status.html.erb
+++ b/app/views/resumes/_resume_status.html.erb
@@ -1,12 +1,14 @@
-<div class="rounded-md bg-green-50 p-4">
-  <div class="flex">
-    <div class="flex-shrink-0">
-      <svg class="h-5 w-5 text-green-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-        <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
-      </svg>
+<div class="flex h-96 items-center justify-center">
+  <div class="text-center w-full max-w-md mx-auto">
+    <h1 class="mt-4 text-2xl font-bold tracking-tight text-gray-900 sm:text-4xl">正在解析简历</h1>
+    <p class="mt-6 text-base leading-7 text-gray-600">预计等待 5-10 分钟</p>
+    <div class="mt-6 relative mb-5 h-5 w-3/4 mx-auto rounded-full bg-gray-200">
+      <div class="h-full animate-pulse rounded-full bg-indigo-500" style="width: 75%">
+        <span class="absolute inset-0 flex items-center justify-center text-xs font-semibold text-white">75%</span>
+      </div>
     </div>
-    <div class="ml-3">
-      <p class="text-sm font-medium text-green-800"><%= "message" %></p>
+    <div class="mt-10 flex items-center justify-center gap-x-6">
+      <a href="<%= root_path %>" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">回到主页</a>
     </div>
   </div>
 </div>
