--- a/app/views/resumes/_navigation_form.html.erb
+++ b/app/views/resumes/_navigation_form.html.erb
@@ -99,7 +99,7 @@
         <h2 class="text-base font-semibold leading-7 text-gray-900">简历文件</h2>
         <p class="mt-1 text-sm leading-6 text-gray-600">轻轻把简历扔过来，让我整理得光鲜亮丽！（摇尾期待）</p>
       </div>
-      <%= form_with model: @resume, url: resumes_path, local: true, class: "bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2", html: { multipart: true } do |form| %>
+      <%= form_with model: @resume, url: resumes_path, local: true, class: "bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl md:col-span-2", html: { multipart: true }, data: { controller: "file-upload" } do |form| %>
         <div class="px-4 py-6 sm:p-8">
           <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
 
@@ -114,7 +114,7 @@
                     <% if logged_in? %>
                       <label for="file-upload" class="relative cursor-pointer rounded-md bg-white font-semibold text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-600 focus-within:ring-offset-2 hover:text-indigo-500">
                         <span>上传简历</span>
-                        <%= form.file_field :original_file, required: true, direct_upload: true, accept: '.pdf', class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 file:me-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-indigo-600 file:text-white" %>
+                        <%= form.file_field :original_file, required: true, direct_upload: true, accept: '.pdf', data: { target: "file-upload.fileInput" }, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 file:me-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-indigo-600 file:text-white" %>
                       </label>
                     <% else %>
                       <div class="cursor-not-allowed opacity-50">
@@ -129,15 +129,6 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="flex items-center justify-end gap-x-6 border-t border-gray-900/10 px-4 py-4 sm:px-8">
-          <% if logged_in? %>
-            <%= form.submit "上传", class: "rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" %>
-          <% else %>
-            <button type="button" disabled class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm opacity-50 cursor-not-allowed">
-              上传
-            </button>
-          <% end %>
         </div>
       <% end %>
     </div>
