--- a/app/views/settings/edit.html.erb
+++ b/app/views/settings/edit.html.erb
@@ -15,9 +15,8 @@
                 <div class="sm:col-span-2">
                   <%= form.label :nickname, "昵称", class: "block text-sm font-medium leading-6 text-gray-900" %>
                   <div class="mt-2">
-                    <%= form.text_field :nickname, required: true, :maxlength => 30, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
+                    <%= form.text_field :nickname, required: true, :placeholder => "汪汪可以如何称呼你呢？", :maxlength => 30, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
                   </div>
-                  <p class="mt-3 text-sm leading-6 text-gray-600">汪汪可以如何称呼你呢？</p>
                 </div>
               </div>
             </div>
