--- a/app/views/homepage/_header.html.erb
+++ b/app/views/homepage/_header.html.erb
@@ -18,7 +18,7 @@
       </button>
     </div>
     <div class="hidden lg:flex lg:gap-x-12">
-      <a href="<%= works_user_journey_maps_path %>" class="text-sm font-semibold leading-6 text-gray-900">日常工作</a>
+      <a href="<%= works_products_path %>" class="text-sm font-semibold leading-6 text-gray-900">日常工作</a>
       <a href="<%= new_resume_path %>" class="text-sm font-semibold leading-6 text-gray-900">职业发展</a>
     </div>
     <div class="hidden lg:flex lg:flex-1 lg:justify-end">
