--- a/app/views/works/user_journey_maps/show.html.erb
+++ b/app/views/works/user_journey_maps/show.html.erb
@@ -8,7 +8,7 @@
 
           <div class="md:flex md:items-center md:justify-between">
             <div class="min-w-0 flex-1">
-              <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">用户视角分析</h2>
+              <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">使用场景分析</h2>
             </div>
             <div class="mt-4 flex md:ml-4 md:mt-0">
 <!--              <button type="button" class="inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">Edit</button>-->
@@ -24,7 +24,6 @@
                   <label for="current-tab" class="sr-only">Select a tab</label>
                   <select id="current-tab" name="current-tab" class="block w-full rounded-md border-gray-300 py-2 pl-3 pr-10 text-base focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm">
                     <option selected>与汪汪交流</option>
-                    <option>产品背景</option>
                   </select>
                 </div>
                 <!-- Tabs at small breakpoint and up -->
@@ -32,43 +31,12 @@
                   <nav class="-mb-px flex space-x-8">
                     <!-- Current: "border-indigo-500 text-indigo-600", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
                     <a data-tabs-target="tab" data-action="click->tabs#change" class="border-indigo-500 text-indigo-600 whitespace-nowrap border-b-2 px-1 pb-4 text-sm font-medium cursor-pointer" aria-current="page">与汪汪交流</a>
-                    <a data-tabs-target="tab" data-action="click->tabs#change" class="text-gray-500 hover:border-gray-300 hover:text-gray-700 whitespace-nowrap border-b-2 px-1 pb-4 text-sm font-medium cursor-pointer">产品背景</a>
                   </nav>
                 </div>
               </div>
             </div>
 
             <%= render 'shared/chat_form', session: @session, product: @product, chat_histories: @chat_histories %>
-
-
-            <%= form_with model: @product, url: works_product_path(@product, user_journey_map_id: @user_journey_map.id), method: :put, local: true, data: { tabs_target: "panel" } do |form| %>
-              <div class="space-y-6">
-                <div class="border-b border-gray-900/10 pb-12">
-                  <h2 class="text-base font-semibold leading-7 text-gray-900 mt-4">产品背景</h2>
-
-                  <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-                    <div class="col-span-full">
-                      <%= form.label :description, "产品简介", class: "block text-sm font-medium leading-6 text-gray-900" %>
-                      <div class="mt-2">
-                        <%= form.text_area :description, required: true, rows: 2, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
-                      </div>
-                      <p class="mt-3 text-sm leading-6 text-gray-600">想了解你目前负责的产品介绍</p>
-                    </div>
-                    <div class="col-span-full">
-                      <%= form.label :target_user, "目标用户", class: "block text-sm font-medium leading-6 text-gray-900" %>
-                      <div class="mt-2">
-                        <%= form.text_area :target_user, required: true, rows: 2, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
-                      </div>
-                      <p class="mt-3 text-sm leading-6 text-gray-600">你的产品是为谁服务的呢？</p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="mt-6 flex items-center justify-end gap-x-6">
-                  <%= form.submit "更新", class: "rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" %>
-                </div>
-              </div>
-            <% end %>
           </div>
 
         </div>
@@ -93,7 +61,7 @@
                 To: "translate-x-full"
             -->
             <div class="pointer-events-auto w-screen max-w-md">
-              <%= form_with model: @prompt_form, url: create_prompt_form_works_user_journey_map_path(@user_journey_map), local: true, class: "flex h-full flex-col divide-y divide-gray-200 bg-white shadow-xl" do |form| %>
+              <%= form_with model: @prompt_form, url: create_prompt_form_works_product_user_journey_map_path(@product, @user_journey_map), local: true, class: "flex h-full flex-col divide-y divide-gray-200 bg-white shadow-xl" do |form| %>
                 <div class="h-0 flex-1 overflow-y-auto">
                   <div class="bg-indigo-700 px-4 py-6 sm:px-6">
                     <div class="flex items-center justify-between">
