--- a/app/views/works/discussions/index.html.erb
+++ b/app/views/works/discussions/index.html.erb
@@ -1,15 +1,6 @@
-<!--
-  This example requires updating your template:
-
-  ```
-  <html class="h-full bg-white">
-  <body class="h-full">
-  ```
--->
 <div>
-  <%= render 'works/parent_menu' %>
-
-  <main class="py-10 lg:pl-72" data-controller="chat">
+  <%= render 'works/product_menu' %>
+  <main class="py-10 lg:pl-72" data-controller="thinking-models" data-thinking-models-product-id-value="<%= params[:product_id] %>">
     <div class="overflow-hidden rounded-lg bg-white shadow">
       <div class="px-4 py-5 sm:p-6">
         <div class="px-4 sm:px-6 lg:px-8">
@@ -18,16 +9,32 @@
             <!-- Prompt Messages -->
             <div
               class="flex-1 space-y-6 overflow-y-auto rounded-xl bg-slate-200 p-4 text-sm leading-6 text-slate-900 shadow-sm dark:bg-slate-900 dark:text-slate-300 sm:text-base sm:leading-7"
-              data-chat-target="messages"
+              data-thinking-models-target="messages"
             >
               <!-- Prompt message list -->
             </div>
             <!-- Prompt message input -->
-            <form class="mt-2" data-action="chat#submit">
+            <form class="mt-2" data-action="thinking-models#submit">
+              <div class="mb-2 flex gap-x-2 overflow-x-auto whitespace-nowrap text-xs text-slate-600 dark:text-slate-300 sm:text-sm">
+                <div class="flex items-center space-x-4">
+                  <div>
+                    <input type="checkbox" id="first-principle-thinking" value="第一性原理" class="hidden peer" data-thinking-models-target="model">
+                    <label for="first-principle-thinking" class="inline-flex items-center justify-center px-2 py-1 text-sm font-medium text-gray-500 bg-white border-4 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 peer-checked:border-green-600 hover:text-gray-600 dark:peer-checked:text-gray-300 peer-checked:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700 peer-checked:border-4">
+                      第一性原理
+                    </label>
+                  </div>
+                  <div>
+                    <input type="checkbox" id="kano-model" value="卡诺模型" class="hidden peer" data-thinking-models-target="model">
+                    <label for="kano-model" class="inline-flex items-center justify-center px-2 py-1 text-sm font-medium text-gray-500 bg-white border-4 border-gray-200 rounded-lg cursor-pointer dark:hover:text-gray-300 dark:border-gray-700 peer-checked:border-green-600 hover:text-gray-600 dark:peer-checked:text-gray-300 peer-checked:text-gray-600 hover:bg-gray-50 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700 peer-checked:border-4">
+                      卡诺模型分析
+                    </label>
+                  </div>
+                </div>
+              </div>
               <label for="chat-input" class="sr-only">请描述你遇到的产品问题</label>
               <div class="flex gap-x-2">
                 <textarea
-                  data-chat-target="input"
+                  data-thinking-models-target="input"
                   data-controller="textarea-autogrow"
                   id="chat-input"
                   type="text"
@@ -39,7 +46,7 @@
                 <button
                   type="submit"
                   class="rounded-lg border border-transparent bg-blue-600 px-3 py-1 text-slate-200 hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300"
-                  data-chat-target="submitButton"
+                  data-thinking-models-target="submitButton"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
